# SDL-PlayMusic

./: CMakeLists.txt  LICENSE  Makefile  README.md  cmake_bash.sh  gdb_read.txt  sdl_playmusic
inc/: Application.h  Background.h  Bar.h  Button.h  DataControl.h  EventReceiver.h  FrameControl.h  Horizontal_Bar.h  Layer.h  Music.h  MusicController.h  MusicList.h  MusicManagement.h  PlayPauseButton.h  PopUpBox.h  Song.h  SongTitle.h  StateButton.h  StaticButton.h  Text.h  Texture.h  TimeBar.h  Vertical_Bar.h  Window.h
main/: main.cpp
src/: Application.cpp  Background.cpp  Bar.cpp  Button.cpp  DataControl.cpp  EventReceiver.cpp  FrameControl.cpp  Horizontal_Bar.cpp  Layer.cpp  Music.cpp  MusicController.cpp  MusicList.cpp  MusicManagement.cpp  PlayPauseButton.cpp  PopUpBox.cpp  Song.cpp  SongTitle.cpp  StateButton.cpp  StaticButton.cpp  Text.cpp  Texture.cpp  TimeBar.cpp  Vertical_Bar.cpp  Window.cpp
